--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
         {% include social.html %}
 
         <!-- Insta/TikTok/YouTube Link-in-bio -->
-        {% include bio.html %}
+       <!-- {% include bio.html %} -->
 
         <!-- Link Buttons -->
         {% include links.html %}
