--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,9 @@
             </div>
         </header>
 
-        <!-- Dark / Light Mode Switch -->
+        <!-- Dark / Light Mode Switch
         <a class="bd-primary is-rounded is-center" href="#" id="theme-switch" onclick="switchMode(this); return false;"
-            aria-label="Switch Theme" role="button">☀️</a>
+            aria-label="Switch Theme" role="button">☀️</a> -->
         <!-- Social Media Links -->
         {% include social.html %}
 
