--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,5 +1,5 @@
 <nav class="nav">
-    <div class="nav-center">
+    <div class="nav-center" style="display:flex;justify-content: center;">
         {% for social in site.data.social %}
         <a class="brand" href="{{ social.url }}" target="_blank" aria-label="{{ social.name }}" {% if
             social.name=="mastodon" %}rel="me" {% endif %}>
