--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,5 @@
     <small class="text-grey">Powered by <a href="https://github.com/digitalmalayali/linkhub-jekyll-theme"
         target="_blank">Linkhub</a>. Code is licensed under <a
             href="https://github.com/digitalmalayali/linkhub-jekyll-theme/blob/main/LICENSE.txt" target="_blank">MIT</a>.</small>
-    <h6>© {{ "now" | date: "%Y" }} {{ site.name }}</h6>
+    <h6>© {{ "now" | date: "%Y" }}</h6>
 </footer>
